--- a/grav/user/data/gantry5/themes/g5_helium/config/default/index.yaml
+++ b/grav/user/data/gantry5/themes/g5_helium/config/default/index.yaml
@@ -1,5 +1,5 @@
 name: default
-timestamp: 1527275812
+timestamp: 1527528894
 version: 7
 preset:
   image: 'gantry-admin://images/layouts/default.png'
@@ -42,6 +42,8 @@ particles:
     accordion-3713: Accordion
   contentvertcubeslong:
     contentvertcubeslong-2097: 'Content Vertical Cubes Long'
+  custom:
+    custom-2296: 'Custom HTML'
   position:
     position-position-4734: Aside
     position-position-3949: Sidebar
